--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/express": "^5.0.0",
     "@types/ws": "^8.5.14",
+    "express": "^4.21.2",
+    "socket.io": "^4.8.1",
     "ws": "^8.18.0"
   }
 }
